# FRPC

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  Doxyfile  README.md  test_awaitable_simple.cpp  walkthrough.md  面试准备-README.md
.kiro/specs/frpc-framework/: .config.kiro  design.md  requirements.md  tasks.md
archive/: BUILD_INSTRUCTIONS.md  DOCUMENTATION_REORGANIZATION.md  EXAMPLES_SUMMARY.md  MVP_COMPLETION_SUMMARY.md  README.md  README_MVP.md  TASK_13.5_SUMMARY.md  TASK_16_PERFORMANCE_TESTING_SUMMARY.md  TASK_5.2_SUMMARY.md
benchmarks/: BENCHMARK_RESULTS.md  CMakeLists.txt  README.md  benchmark_coroutine.cpp  benchmark_memory_pool.cpp  benchmark_network_io.cpp  benchmark_serialization.cpp
docs/: .gitkeep  00-index.md  01-introduction.md  02-quick-start.md  03-architecture.md  04-user-guide.md  05-configuration.md  06-data-models.md  07-best-practices.md  08-troubleshooting.md  09-api-reference.md  FRPC_完整技术文档.md  README.md  面试准备总结.md
docs/archive/: README.md  generate_docs.sh  rpc_client_mvp.md  rpc_server_implementation_summary.md  rpc_server_mvp.md  verify_docs.py  代码定位速查表.md  文档整合说明.md  面试准备指南.md  面试演示脚本.sh
examples/: CMakeLists.txt  CONFIG_EXAMPLES.md  HEALTH_CHECK_EXAMPLE.md  MULTI_INSTANCE_EXAMPLE.md  README.md  calculator_service_example.cpp  client_config.json  client_development.json  client_production.json  complete_rpc_example.cpp  config_example.json  config_usage_example.cpp  coroutine_usage_example.cpp  data_models_example.cpp  echo_service_example.cpp  hello_frpc.cpp  integration_example.cpp  rpc_client_example.cpp  rpc_server_example.cpp  serializer_example.cpp  server_config.json  server_development.json  server_production.json  server_stats_example.cpp
include/frpc/: buffer_pool.h  config.h  connection_pool.h  coroutine.h  coroutine_scheduler.h  data_models.h  error_codes.h  exceptions.h  health_checker.h  load_balancer.h  logger.h  memory_pool.h  network_awaitable.h  network_engine.h  rpc_client.h  rpc_server.h  serializer.h  service_registry.h  types.h
src/: buffer_pool.cpp  config.cpp  connection_pool.cpp  coroutine_scheduler.cpp  data_models.cpp  error_codes.cpp  health_checker.cpp  load_balancer.cpp  logger.cpp  memory_pool.cpp  network_awaitable.cpp  network_engine.cpp  rpc_client.cpp  rpc_server.cpp  serializer.cpp  service_registry.cpp
stress_tests/: CMakeLists.txt  MEMORY_LEAK_DETECTION.md  README.md  STRESS_TEST_GUIDE.md  run_all_tests.sh  run_basic_load.sh  run_high_concurrency.sh  run_peak_load.sh  run_sustained_load.sh  stress_test_server.cpp
tests/: CMakeLists.txt  placeholder_test.cpp  test_buffer_pool.cpp  test_config.cpp  test_connection_pool.cpp  test_connection_pool_properties.cpp  test_coroutine_scheduler.cpp  test_data_models.cpp  test_error_codes.cpp  test_error_completeness_property.cpp  test_error_handling_verification.cpp  test_exception_logging_property.cpp  test_health_checker.cpp  test_health_checker_properties.cpp  test_integration_e2e.cpp  test_integration_simple.cpp  test_load_balancer.cpp  test_load_balancer_properties.cpp  test_logger.cpp  test_memory_pool.cpp  test_network_engine.cpp  test_network_engine_properties.cpp  test_rpc_client.cpp  test_rpc_client_properties.cpp  test_rpc_client_timeout.cpp  test_rpc_server.cpp  test_rpc_server_properties.cpp  test_rpctask_awaitable.cpp  test_serializer.cpp  test_server_stats.cpp  test_service_registry.cpp  test_service_registry_properties.cpp
